style: Fix header overflow and standardize cell size to 50px square

--- a/templates/style.css
+++ b/templates/style.css
@@ -383,8 +383,8 @@ body {
     }
 
     td.score-cell {
-        width: 32px;
-        height: 32px;
+        width: 50px;
+        height: 50px;
         padding: 0;
         margin: 0;
         border-radius: 4px;
